deploy-delay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-delay-pod
  template:
    metadata:
      labels:
        app: nginx-delay-pod
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
