deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-container-app
  labels:
    app: multi_container
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-multitool-deploy
  template:
    metadata:
      labels:
        app: nginx-multitool-deploy
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
