dpl_ng_multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool-deploy
  labels:
    app: task_1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ngx-multitool
  template:
    metadata:
      labels:
        app: ngx-multitool
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
        - name: multitool
          image: busybox
          command: ["sleep", "infinity"]
