echoserver.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: echoserver-pod
  name: echoserver
  namespace: default
spec:
  containers:
    - name: echoserver
      image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
      ports:
        - containerPort: 8080
