netology-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
  labels:
    app: echoserver
spec:
  type: NodePort
  selector:
    app: echo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
