service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: multitool-port
      protocol: TCP
      port: 80
      targetPort: 8080
