svc-delay.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-delay
spec:
  type: ClusterIP
  selector:
    app: nginx-delay-pod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
